# uuv_plume_simulator

./: .travis.yml  NOTICE  README.md
uuv_cpc_sensor/: CHANGELOG.rst  CMakeLists.txt  package.xml
uuv_cpc_sensor/include/uuv_cpc_sensor/: CPCSensor.hh
uuv_cpc_sensor/launch/: start_cpc_sensor.launch
uuv_cpc_sensor/src/: CPCSensor.cc  CPCSensorNode.cc
uuv_plume_msgs/: CHANGELOG.rst  CMakeLists.txt  package.xml
uuv_plume_msgs/msg/: ParticleConcentration.msg  Salinity.msg
uuv_plume_msgs/srv/: CreatePassiveScalarTurbulentPlume.srv  CreateSpheroidPlume.srv  GetNumParticles.srv  GetPlumeConfiguration.srv  GetPlumeSourcePosition.srv  LoadPlumeParticles.srv  SetCurrentVelocity.srv  SetPlumeConfiguration.srv  SetPlumeLimits.srv  SetPlumeSourcePosition.srv  StorePlumeState.srv
uuv_plume_simulator/: CHANGELOG.rst  CMakeLists.txt  package.xml  setup.py
uuv_plume_simulator/launch/: start_current_velocity_server.launch  start_demo_turbulent_plume.launch  start_plume_example.launch  start_plume_server.launch  start_turbulent_plume.launch
uuv_plume_simulator/rviz/: plume_example.rviz
uuv_plume_simulator/scripts/: current_velocity_server  load_plume_particles  plume_server  set_current_vel  set_demo_current_vel  set_demo_current_vel_gazebo  set_demo_spheroid_plume  set_demo_turbulent_plume  set_turbulent_plume
uuv_plume_simulator/src/uuv_gm_process/: __init__.py  gauss_markov_process.py
uuv_plume_simulator/src/uuv_plume_model/: __init__.py  passive_scalar_turbulence.py  plume.py  spheroid.py
