<?xml version="1.0"?>
<package>
  <name>uuv_plume_msgs</name>
  <version>0.1.0</version>
  <description>Plume simulator messages and services package.</description>

  <maintainer email="musa.marcusso@de.bosch.com">Musa Morena Marcusso Manhaes</maintainer>
  <author email="musa.marcusso@de.bosch.com">Musa Morena Marcusso Manhaes</author>

  <license>Apache-2.0</license>

  <build_depend>std_msgs</build_depend>
  <build_depend>geometry_msgs</build_depend>
  <build_depend>message_generation</build_depend>

  <run_depend>std_msgs</run_depend>
  <run_depend>geometry_msgs</run_depend>
  <run_depend>message_runtime</run_depend>

  <buildtool_depend>catkin</buildtool_depend>
</package>
