<?xml version="1.0"?>
<package format="2">
  <name>uuv_plume_msgs</name>
  <version>0.3.1</version>
  <description>Plume simulator messages and services package.</description>

  <maintainer email="musa.marcusso@de.bosch.com">Musa Morena Marcusso Manhaes</maintainer>
  <author email="musa.marcusso@de.bosch.com">Musa Morena Marcusso Manhaes</author>

  <license>Apache-2.0</license>

  <depend>std_msgs</depend>
  <depend>geometry_msgs</depend>
  <depend>geographic_msgs</depend>

  <build_depend>message_generation</build_depend>

  <exec_depend>message_runtime</exec_depend>

  <buildtool_depend>catkin</buildtool_depend>
</package>
