<?xml version="1.0"?>
<package>
  <name>uuv_plume_simulator</name>
  <version>0.1.0</version>
  <description>Plume simulator package</description>

  <maintainer email="musa.marcusso@de.bosch.com">Musa Morena Marcusso Manhaes</maintainer>
  <author email="musa.marcusso@de.bosch.com">Musa Morena Marcusso Manhaes</author>

  <license>Apache-2.0</license>

  <run_depend>std_msgs</run_depend>
  <run_depend>geometry_msgs</run_depend>
  <run_depend>visualization_msgs</run_depend>
  <run_depend>rospy</run_depend>
  <run_depend>sensor_msgs</run_depend>
  <run_depend>uuv_plume_msgs</run_depend>
  <run_depend>python-numpy</run_depend>

  <buildtool_depend>catkin</buildtool_depend>

</package>
