<?xml version="1.0"?>
<package format="2">
  <name>uuv_plume_simulator</name>
  <version>0.3.1</version>
  <description>Plume simulator package</description>

  <maintainer email="musa.marcusso@de.bosch.com">Musa Morena Marcusso Manhaes</maintainer>
  <author email="musa.marcusso@de.bosch.com">Musa Morena Marcusso Manhaes</author>

  <license>Apache-2.0</license>

  <depend>std_msgs</depend>
  <depend>geometry_msgs</depend>
  <depend>visualization_msgs</depend>
  <depend>rospy</depend>
  <depend>sensor_msgs</depend>
  <depend>uuv_plume_msgs</depend>
  <depend>python-numpy</depend>

  <buildtool_depend>catkin</buildtool_depend>

</package>
